agregando page E-Shop

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 				  </button>
 				  <div class="justify-content-end collapse navbar-collapse " id="navbarNavAltMarkup">
 				    <div class="navbar-nav">
-				      <a class="nav-link p-4 nav__pages--animacion" href="pages/shows.html">Shows</a>		      
+				      <a class="nav-link p-4 nav__pages--animacion" href="pages/shows.html">Shows</a>
+				      <a class="nav-link p-4 nav__pages--animacion" href="pages/e-shop.html">E-Shop</a>		      
 				      <a class="nav-link p-4 nav__pages--animacion" href="pages/discografia.html">Discografía</a>
 				      <a class="nav-link p-4 nav__pages--animacion" href="pages/biografia.html">Biografía</a>
 				      <a class="nav-link p-4 nav__pages--animacion" href="pages/contacto.html">Contacto</a>
@@ -68,6 +69,7 @@
 				    <li data-target="#carousel-example-2" data-slide-to="1"></li>
 				    <li data-target="#carousel-example-2" data-slide-to="2"></li>
 				    <li data-target="#carousel-example-2" data-slide-to="3"></li>
+				    <li data-target="#carousel-example-2" data-slide-to="4"></li>
 				  </ol>
 				  <!--/.Indicators-->
 				  <!--Slides-->
@@ -99,6 +101,20 @@
 				        <p class="carousel__subtitulo sombraTxt">Enterate de todas las fechas que se vienen.</p>
 				      </div>
 				    </div>
+				    <div class="carousel-item">
+				      <!--Mask color-->
+				      <div class="view">
+				      	<a href="pages/e-shop.html">
+				        <img class="d-block w-100" src="assets/images/FOTO11.jpg"
+				          alt="Second slide">
+				      	</a>
+				        <div class="mask rgba-black-strong"></div>
+				      </div>
+				      <div class="carousel-caption hidden-mobile">
+				        <h3 class="h3-responsive carousel__titulo sombraTxt">E-Shop</h3>
+				        <p class="carousel__subtitulo sombraTxt">El merchandising oficial de Acru.</p>
+				      </div>
+				    </div>			    
 				    <div class="carousel-item">
 				      <!--Mask color-->
 				      <div class="view">
