--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -44,7 +44,8 @@
 				  </button>
 				  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 				    <div class="navbar-nav">
-				      <a class="nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>				      
+				      <a class="nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>
+				      <a class="nav-link p-4 nav__pages--animacion" href="e-shop.html">E-Shop</a>			      
 				      <a class="nav-link p-4 nav__pages--animacion" href="discografia.html">Discografía</a>
 				      <a class="active nav-link p-4 nav__pages--animacion" href="biografia.html">Biografía</a>
 				      <a class="nav-link p-4 nav__pages--animacion" href="contacto.html">Contacto</a>
