--- a/pages/e-shop.html
+++ b/pages/e-shop.html
@@ -35,65 +35,40 @@
 		<div class="row">
 			<div class="col-lg-12 col-xs-12">
 				<nav class="navbar navbar-expand-lg navbar-light">
-				  <a class="navbar-brand d-flex justify-content-center align-items-center nav__pages--animacion" href="../index.html">
-				    <img src="../assets/logos e iconos/LOGO1.png" width="75" height="75" class="d-inline-block align-top" alt="Acru">
-				    <h1 class="nav__h1">ACRU</h1>
-				  </a>
-				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+					<a class="navbar-brand d-flex justify-content-center align-items-center nav__pages--animacion" href="../index.html">
+				    	<img src="../assets/logos e iconos/LOGO1.png" width="75" height="75" class="d-inline-block align-top" alt="Acru">
+				    	<h1 class="nav__h1">ACRU</h1>
+					</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
-				  </button>
-				  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-				    <div class="navbar-nav">
-					    <a class="nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>
-					    <a class="active nav-link p-4 nav__pages--animacion" href="e-shop.html">E-Shop</a>
-					    <a class="nav-link p-4 nav__pages--animacion" href="discografia.html">Discografía</a>
-					    <a class="nav-link p-4 nav__pages--animacion" href="biografia.html">Biografía</a>
-					    <a class="nav-link p-4 nav__pages--animacion" href="contacto.html">Contacto</a>
-					    <div class="dropdown p-4 btn-group dropleft">
-							<button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								<div class="d-inline-flex justify-content-center align-items-center">
-									<img src="../assets/images/carrito-de-compras.png" width="30" class="mr-3 ">
-									<span class="badge badge-light e-shop__spanCarrito--tyf p-2">10</span>
-								</div>	    
-							</button>
-							<div class="dropdown-menu e-shop__carrito--background" aria-labelledby="dropdownMenuButton">
-								<div>
-									<div class="d-flex justify-content-between align-items-center">
-										<div>
-											<p class="m-3 e-shop__productoCarrito--tyf">Remera</p>
-										</div>
-										<div class="d-inline-flex align-items-center">
-											<span class="m-3 p-2 badge btn-warning e-shop__spanCarrito--tyf">Cantidad: 1</span>
-											<span class="m-3 p-2 badge btn-success e-shop__spanCarrito--tyf">$1500</span>
-											<button type="button" class="btn btn-danger m-3">
-												<img src="../assets/images/cesto.png" width="15" alt="">
-											</button>
-										</div>
-										<hr>
-									</div>
-									<div class="d-flex justify-content-between align-items-center">
-										<div>
-											<p class="m-3 e-shop__productoCarrito--tyf">Remera</p>
-										</div>
-										<div class="d-inline-flex align-items-center">
-											<span class="m-3 p-2 badge btn-warning e-shop__spanCarrito--tyf">Cantidad: 1</span>
-											<span class="m-3 p-2 badge btn-success e-shop__spanCarrito--tyf">$1500</span>
-											<button type="button" class="btn btn-danger m-3">
-												<img src="../assets/images/cesto.png" width="15" alt="">
-											</button>
-										</div>
-										<hr>
-									</div>
-								</div>																	
-							    <hr>
-							    <div class="d-flex flex-column justify-content-center align-items-center">
-								    <p class="e-shop__totalCarrito--tyf">Total: $1500</p>
-								    <button type="button" class="btn e-shop__comprarCarrito--tyf e-shop__card--animacion">COMPRAR</button>
-							    </div>
-							</div>
-						</div>						
-				    </div>
-				  </div>
+					</button>
+				  	<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+					    <div class="navbar-nav">
+						    <a class="nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>
+						    <a class="active nav-link p-4 nav__pages--animacion" href="e-shop.html">E-Shop</a>
+						    <a class="nav-link p-4 nav__pages--animacion" href="discografia.html">Discografía</a>
+						    <a class="nav-link p-4 nav__pages--animacion" href="biografia.html">Biografía</a>
+						    <a class="nav-link p-4 nav__pages--animacion" href="contacto.html">Contacto</a>
+						    <div class="dropdown p-4 btn-group dropleft">
+								<button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<div class="d-inline-flex justify-content-center align-items-center">
+										<img src="../assets/images/carrito-de-compras.png" width="30" class="mr-3 ">
+										<span id="cantidadCarrito" class="badge badge-light e-shop__spanCarrito--tyf p-2"></span>
+									</div>	    
+								</button>
+								<div class="dropdown-menu e-shop__carrito--background" aria-labelledby="dropdownMenuButton">
+									<div id="carrito">
+										
+									</div>																
+								    <hr>
+								    <div class="d-flex flex-column justify-content-center align-items-center">
+									    <p class="e-shop__totalCarrito--tyf">Total: $1500</p>
+									    <button type="button" class="btn e-shop__comprarCarrito--tyf e-shop__card--animacion">COMPRAR</button>
+								    </div>
+								</div>
+							</div>						
+				    	</div>
+				  	</div>
 				</nav>				
 			</div>
 		</div>		
@@ -120,20 +95,11 @@
 		</div>		
 	</div>
 
-	<div class="container mt-5" data-aos="fade-up">
+	<!-- stock -->
+	<div class="container mt-5 mb-5" data-aos="fade-up">
 		<div class="row">
-			<div class="col-lg-12 col-xs-12 p-3 d-flex justify-content-around flex-wrap e-shop__background rounded">
-				<div class="card m-3 e-shop__card--background e-shop__card--animacion e-shop__card--border sombraCont" style="width: 25rem;">
-					<img src="../assets/images/productos/tshirt_man.jpg" class="card-img-top img-fluid" alt="...">
-					<div class="card-body">
-					    <h5 class="card-title e-shop__cardTitle--tyf sombraTxt">Card title</h5>
-					    <p class="card-text e-shop__cardP--tyf sombraTxt">
-					    	Precio y giladas<br>
-					    	Otras Giladas
-					    </p>
-					    <a href="#" class="btn e-shop__comprar--animacion e-shop__cardP--btn">Comprar</a>
-					</div>
-				</div>
+			<div id="stock" class="col-lg-12 col-xs-12 p-3 d-flex justify-content-around flex-wrap e-shop__background rounded">
+				
 			</div>
 		</div>
 	</div>
