--- a/pages/e-shop.html
+++ b/pages/e-shop.html
@@ -138,14 +138,11 @@
 
 	<!-- AOS JS -->
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-	<script>
-  	AOS.init();
-	</script>
+	<script>AOS.init();</script>
 
 	<script src="../js/funciones.js"></script>
 	<script src="../js/globales.js"></script>
 	<script src="../js/producto.js"></script>
-	<script src="../js/stock.js"></script>
 	<script src="../js/main.js"></script>
 </body>
 </html> 
