--- a/pages/e-shop.html
+++ b/pages/e-shop.html
@@ -56,14 +56,14 @@
 										<span id="cantidadCarrito" class="badge badge-light e-shop__spanCarrito--tyf p-2"></span>
 									</div>	    
 								</button>
-								<div class="dropdown-menu e-shop__carrito--background" aria-labelledby="dropdownMenuButton">
+								<div class="dropdown-menu e-shop__carrito--background" aria-labelledby="dropdownMenuButton" width="200">
 									<div id="carrito">
 										
 									</div>																
 								    <hr>
 								    <div class="d-flex flex-column justify-content-center align-items-center">
-									    <p class="e-shop__totalCarrito--tyf">Total: $1500</p>
-									    <button type="button" class="btn e-shop__comprarCarrito--tyf e-shop__card--animacion">COMPRAR</button>
+									    <p id="precioTotal" class="e-shop__totalCarrito--tyf"></p>
+									    <button id="finalizarCompra" type="button" class="btn e-shop__comprarCarrito--tyf e-shop__card--animacion">COMPRAR</button>
 								    </div>
 								</div>
 							</div>						
